# cootie-catcher-experiments

./: .gitmodules  Cargo.toml  Makefile  README.md  build.rs  estimates.ipynb  inverse.sage  inverse.sage.py  schedule.sh
benches/: modular_reduction.rs
cpp-bindings/: empty.cpp  hexl_wrapper.cpp
new-repots/: slurm-6808688.out  slurm-6808689.out  slurm-6808690.out  slurm-6808691.out  slurm-6808692.out  slurm-6808693.out  slurm-6808694.out  slurm-6808695.out  slurm-6808696.out  slurm-6808697.out  slurm-6808698.out  slurm-6808700.out  slurm-6808701.out  slurm-6808702.out  slurm-6808703.out  slurm-6808704.out  slurm-6808705.out  slurm-6808706.out  slurm-6808707.out  slurm-6808708.out  slurm-6808709.out  slurm-6808710.out  slurm-6808711.out  slurm-6828322.out  slurm-6831973.out  slurm-6831974.out  slurm-6831975.out  slurm-6831976.out  slurm-6834844.out  slurm-6944399.out  slurm-6944400.out  slurm-6944401.out  slurm-6944402.out  slurm-6944403.out  slurm-6944404.out  slurm-6944405.out  slurm-6944406.out  slurm-6952848.out  slurm-6977984.out
reports/: a-n-h.out  a-n.out  a-o.out  slurm-6736252.out  slurm-6736253.out  slurm-6736254.out  slurm-6736255.out  slurm-6736256.out  slurm-6736257.out  slurm-6736258.out  slurm-6736259.out  slurm-6736260.out  slurm-6736261.out  slurm-6736262.out  slurm-6736263.out  slurm-6736264.out  slurm-6736265.out  slurm-6736267.out  slurm-6736268.out  slurm-6736269.out  slurm-6736271.out  slurm-6736272.out  slurm-6736273.out  slurm-6736275.out  slurm-6742982.out  slurm-6742983.out  slurm-6742984.out
scaling-reports/: slurm-6808699.out  (+6 more)
(+108 files in other folders)
