[package]
name = "klno-plus"
version = "0.1.0"
edition = "2021"
default-run = "main"

[[bin]]
name = "main"
path = "src/main.rs"


[features]
A_OLD = []
A_NEW = []
B_OLD = []
B_NEW = []
C_OLD = []
C_NEW = []
D_OLD = []
D_NEW = []
E_OLD = []
E_NEW = []
F_OLD = []
F_NEW = []
F_OLD_2 = []
F_NEW_2 = []
F_OLD_3 = []
F_NEW_3 = []
F_OLD_4 = []
F_NEW_4 = []
F_NEW_0 = []
F_NEW_00 = []
F_OLD_0 = []
F_OLD_00 = []
use-hardware = []
partial-hardware = []


[dependencies]
num-bigint = "0.4.6"
num-traits = "0.2.19"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
ndarray = {  version = "0.16.1", features=["rayon", "matrixmultiply-threading"]  }
once_cell = "1.20.3"
rug = "1.25.0"
criterion = "0.5.1"
rayon = "1.10.0"
num = "0.4.3"
fast-modulo = "0.4.0"
chrono = "0.4.1"
cfg-if = "1.0.0"
num-modular = "0.6.1"
lazy_static = "1.5.0"
memoize = "0.5.1"
log = "0.4.27"

[[bench]]
name = "modular_reduction"
harness = false


[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
